--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,7 +23,7 @@
 
         <meta-data
             android:name="com.google.android.geo.API_KEY"
-            android:value="AIzaSyDseOYQmfTmwuPpHdc-sKjKVlbVnl8ilhs" />
+            android:value="//" />
 
         <activity
             android:name=".AccountEdit"
